--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,18 @@
 		}
 	],
 	"require": {
-		"php": "7.4|^8.0",
-		"psr/container": "^1.1",
+		"php": "^8.0",
+		"psr/container": "^2",
 		"qubus/exception": "^1.2",
 		"sandrokeil/interop-config": "^2.2",
-		"symfony/yaml": "^5.1",
-		"vlucas/phpdotenv": "^5.2"
+		"symfony/yaml": "^5.3",
+		"vlucas/phpdotenv": "^5.3"
 	},
 	"require-dev": {
-		"laminas/laminas-coding-standard": "^2.1",
+		"laminas/laminas-coding-standard": "^2.0",
 		"mockery/mockery": "^1.3.1",
-		"php-coveralls/php-coveralls": "^2.4",
 		"phpunit/phpunit": "^9.0",
-		"squizlabs/php_codesniffer": "^3.3.1"
+		"squizlabs/php_codesniffer": "^3.5"
 	},
 	"autoload": {
 		"psr-4": {
