--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,21 @@
 	"authors": [
 		{
 			"name": "Joshua Parker",
-			"email": "josh@joshuaparker.blog"
+			"email": "joshua@joshuaparker.dev"
 		}
 	],
 	"require": {
-		"php": "^8.1",
+		"php": ">=8.2",
 		"psr/container": "^2",
-		"qubus/exception": "^2.0",
+		"qubus/exception": "^3.0",
 		"sandrokeil/interop-config": "^2.2",
-		"symfony/yaml": "^6.1",
-		"vlucas/phpdotenv": "^5.4"
+		"symfony/yaml": "^6.3",
+		"vlucas/phpdotenv": "^5.5"
 	},
 	"require-dev": {
-		"laminas/laminas-coding-standard": "^2.0",
 		"mockery/mockery": "^1.3.1",
 		"phpunit/phpunit": "^9.0",
+		"qubus/qubus-coding-standard": "^1.1",
 		"squizlabs/php_codesniffer": "^3.5"
 	},
 	"autoload": {
@@ -44,6 +44,9 @@
 	},
 	"config": {
 		"optimize-autoloader": true,
-		"sort-packages": true
+		"sort-packages": true,
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
